crates/strider/tests/snapshots/v3__ppc32le__complex__if_bit_clear_call.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ f2", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x10010138:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "17" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "18" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "25" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "29" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "33" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "36" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "40" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ f1", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "47" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v48" [color="#888888", style=dashed];
  "v48" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "47" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ r4", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v49" [color="#888888", style=dashed];
  "v49" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="φ r3", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "20" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v50" [color="#888888", style=dashed];
  "v50" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "51" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "51" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "56" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "64" -> "62" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "20" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "66" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "70" -> "68" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "74" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="Less\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "20" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "75" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
